# egui-mvvm

./: Cargo.toml  README.md  TOOD.md
crates/egui-mvvm/: Cargo.toml
crates/egui-mvvm-macro/: Cargo.toml
crates/egui-mvvm-macro/src/: lib.rs  view.rs  viewmodel.rs
crates/egui-mvvm/examples/: download_sim.rs  search.rs
crates/egui-mvvm/examples/simple/: main.rs
crates/egui-mvvm/src/: lib.rs  ref_state.rs  task_pool.rs  val_state.rs  view_model.rs
crates/egui-mvvm/src/hooks/: debounce.rs  disposable.rs  effect.rs  mod.rs  state.rs
crates/example-project/: Cargo.toml
crates/example-project/src/: chat_channels.rs  chat_service.rs  chat_window.rs  main.rs  theme.rs
examples/simple/: main.rs
src/: cheap_state.rs  lib.rs  ref_state.rs  state.rs  state_stream.rs  task_pool.rs  val_state.rs  view_model.rs
src/hooks/: debounce.rs  mod.rs
