[package]
name = "egui-mvvm"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.31.0"
tokio = { version = "1.46.0", features = ["sync", "rt", "macros"] }
futures = "0.3.31"

[dev-dependencies]
eframe = "0.31.0"
tokio = { version = "1.46.0", features = ["rt-multi-thread", "time", "macros"] }
rand = "0.9.1"
