[package]
name = "egui-mvvm"
version = "0.1.0"
edition = "2024"

[dependencies]
egui.workspace = true
tokio = { workspace = true, features = ["sync", "rt", "macros", "time"] }
futures.workspace = true
egui-mvvm-macro = { path = "../egui-mvvm-macro" }

[dev-dependencies]
eframe.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "time", "macros"] }
rand.workspace = true